[gd_scene load_steps=7 format=2]

[ext_resource path="res://font_default.tres" type="DynamicFont" id=1]
[ext_resource path="res://UserInterface.gd" type="Script" id=2]
[ext_resource path="res://Title.tscn" type="PackedScene" id=3]
[ext_resource path="res://RetryButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://QuitButton.tscn" type="PackedScene" id=5]

[sub_resource type="Theme" id=1]
default_font = ExtResource( 1 )

[node name="UserInterface" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="."]
margin_left = 11.0
margin_top = 22.0
margin_right = 80.0
margin_bottom = 38.0
text = "Score: %s"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseOverlay" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.321569 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" parent="PauseOverlay" instance=ExtResource( 3 )]
text = "Game Over"

[node name="PauseMenu" type="VBoxContainer" parent="PauseOverlay"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -92.0
margin_top = 222.0
margin_right = 122.0
margin_bottom = -298.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RetryButton" parent="PauseOverlay/PauseMenu" instance=ExtResource( 4 )]
margin_right = 214.0
margin_bottom = 37.0
text = "Retry"

[node name="QuitButton" parent="PauseOverlay/PauseMenu" instance=ExtResource( 5 )]
margin_top = 41.0
margin_right = 214.0
margin_bottom = 78.0
text = "Quit"
